== 1.2.7 / 2008-08-12

- Prepare Ole::Types::PropertySet for write support.
- Introduce Ole::Storage#meta_data as an easy interface to meta data stored
  within various property sets.
- Add new --metadata action to oletool to dump said metadata.
- Add new --mimetype action to oletool, and corresponding Ole::Storage#mime_type
  function to try to guess mime type of a file based on some simple heuristics.
- Restructure project files a bit, and pull in file_system & meta_data support
  by default.

== 1.2.6 / 2008-07-21

- Fix FileClass#expand_path to work properly on darwin (issue #2)
- Guard against Enumerable#sum clash with active support (issue #3)

== 1.2.5 / 2008-02-16

- Make all tests pass on ruby 1.9.

== 1.2.4 / 2008-01-09

- Make all tests pass on windows (issue #1).
- Make all tests pass on a power pc (running ubuntu).
- Property set convenience access functions.

== 1.2.3 / 2007-12-28

- MBAT write support re-implmented. Can now write files over ~8mb again.
- Minor fixes (truncation in #flush, file modification timestamps)
- More test coverage
- Initial (read-only) property set support.
- Complete filesystem api, to pass most of the rubyzip tests.
- Add a ChangeLog :).

== 1.2.2 / 2007-11-05

- Lots of test updates, 90% coverage.
- Fix +to_tree+ method to be more efficient, and stream output.
- Optimizations from benchmarks and profiling, mostly for writes. Fixed
  AllocationTable#resize_chain, RangesIOResizable#truncate and
  AllocationTable#free_block.
- Add in filesystem test file from rubyzip, and start working on a
  filesystem api.

== 1.2.1 / 2007-08-20

- Separate out from ruby-msg as new project.