@@ -17,10 +17,6 @@ For now, see the docs for the Ole::Storage class.
 == 1.3.1
 
 * fix this README :). maybe move todo out, and put something useful here.
-* finish fleshing out tests - 100% coverage (currently at 96%).
-  - ranges io tests
-  - file system api tests
-  - more storage tests
 
 == Longer term
 
